objects/Routing_field__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logic_type__c</fullName>
        <label>Logic type</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>Equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not equals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_logic__c</fullName>
        <label>Routing logic</label>
        <referenceTo>Routing_logic__c</referenceTo>
        <relationshipLabel>Routing_fields</relationshipLabel>
        <relationshipName>Routing_fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subtractionfield__c</fullName>
        <label>Time to subtract from:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Routing field</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Routing field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing_fields</pluralLabel>
    <recordTypes>
        <fullName>Dynamic_Routing_Field</fullName>
        <active>true</active>
        <label>Dynamic Routing Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dynamic_Sections_field</fullName>
        <active>true</active>
        <label>Dynamic Sections Field</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>